# connections-rl-environment

./: .gitignore  pyproject.toml  scrape_connections.py
environments/connections/: README.md  connections.py  connections_data.csv  pyproject.toml  synthetic_puzzles.csv
environments/connections/.prime/: .env-metadata.json
environments/connections/outputs/evals/connections--Qwen--Qwen3-30B-A3B-Instruct-2507:vwxws8z2bohewa6c1q6dtalg/1f442a0b/: metadata.json  results.jsonl
environments/connections/outputs/evals/connections--Qwen--Qwen3-30B-A3B-Thinking-2507/0893cd2e/: metadata.json  results.jsonl
environments/connections/outputs/evals/connections--Qwen--Qwen3-30B-A3B-Thinking-2507/8d34fca4/: metadata.json  results.jsonl
environments/connections/outputs/evals/connections--Qwen--Qwen3-30B-A3B-Thinking-2507/fe27a809/: metadata.json  results.jsonl
environments/connections/outputs/evals/connections--Qwen--Qwen3-30B-A3B-Thinking-2507:ntu8ts06z4sej8j73p8sd9qx/ca6fcead/: metadata.json
environments/connections/outputs/evals/connections--Qwen--Qwen3-30B-A3B-Thinking-2507:verfxj6hq0igxcpagax9mwwi/08def9a5/: metadata.json
environments/connections/outputs/evals/connections--claude-sonnet-4-5-20250929/08547fd9/: metadata.json  results.jsonl
environments/connections/outputs/evals/connections--claude-sonnet-4-5/a0627b2b/: metadata.json  results.jsonl
environments/connections/outputs/evals/connections--openai--gpt-4.1-mini/e0ab8f4a/: metadata.json  results.jsonl
environments/connections/outputs/evals/connections--qwen--qwen3-30b-a3b-instruct-2507/01f32d14/: metadata.json  (+1 more)
(+23 files in other folders)
