[project]
name = "connections"
description = "NYT Connections word-grouping puzzle game environment"
tags = ["multi-turn", "game", "word-puzzle", "train", "eval"]
version = "0.1.2"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.10",
    "anthropic>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["connections.py", "pyproject.toml", "connections_data.csv"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 3
